fix: :bug: fix alignment issue
updated the selector to be more specific

--- a/index.css
+++ b/index.css
@@ -549,7 +549,7 @@ body {
   padding-bottom: 3rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
